inlining method-references and small changes